--- a/sudoku/style.css
+++ b/sudoku/style.css
@@ -59,9 +59,9 @@ h1 {
     background-color: #d0eaff;
 }
 
-/* フォーカスされたエリア（行・列・ボックス）のハイライト */
+/* フォーカスされたエリア（行・列）のハイライト */
 .cell.highlight-area {
-    background-color: #f1f3f5;
+    background-color: #e7ecf2; /* 暗めのブルーが入ったグレーに変更 */
 }
 
 /* フォーカスされた数字と同じ数字のハイライト */
