--- a/sudoku/style.css
+++ b/sudoku/style.css
@@ -66,7 +66,7 @@ h1 {
 
 /* フォーカスされたエリア（行・列）のハイライト */
 .cell.highlight-area {
-    background-color: #cce4ff;
+    background-color: #f7ecd7;
 }
 
 /* フォーカスされた数字と同じ数字の「セル」のハイライト */
